<resources>
    <string name="app_name">Ege_Odev1</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? <b><u>Create</u></b></string>
    <string name="profile">Profile</string>
    <string name="set_up_profile">Set up your profile</string>
    <string name="update_text">Update your profile to connect your doctor with better impression.</string>
    <string name="personal_info">Personal Information</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="continue_text">Continue</string>
    <string name="enter_email">Enter email...</string>
    <string name="send">Send</string>
    <string name="valid_address">%1$s is a valid email address</string>
    <string name="invalid_address">%1$s is not a valid email addres</string>
    <string name="failed">Failed</string>
    <string name="sent_text">Password reset instructions will be sent to: %1$s</string>
</resources>