<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBG"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/loginBG">

                <ImageView
                    android:id="@+id/bg_image"
                    android:layout_width="@dimen/_220sdp"
                    android:layout_height="@dimen/_220sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:src="@drawable/ic_login_bg"
                    app:layout_constraintBottom_toTopOf="@id/editText_username"
                    android:contentDescription=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/username"
                    android:textColorHint="@color/loginHint"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="500"
                    android:inputType="textEmailAddress"
                    app:layout_constraintBottom_toTopOf="@+id/editText_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bg_image" />

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:layout_marginHorizontal="@dimen/_32sdp"
                    android:paddingVertical="@dimen/_14sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:paddingLeft="@dimen/_10sdp"
                    android:textColorHint="@color/loginHint"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="500"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toTopOf="@+id/text_forgot_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_username" />

                <TextView
                    android:id="@+id/text_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_28sdp"
                    android:text="@string/forgot_password"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="400"
                    android:textColor="@color/loginText"
                    app:layout_constraintBottom_toTopOf="@id/button_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_password" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_44sdp"
                    android:background="@drawable/bg_login_button"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="500"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/text_no_account"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_forgot_password" />

                <TextView
                    android:id="@+id/text_no_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/dont_have_account"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:fontFamily="@font/poppins"
                    android:textFontWeight="400"
                    android:textColor="@color/loginText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>