<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".HomeActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="@dimen/_minus28sdp"
        app:cardBackgroundColor="@color/profileGreen"
        app:cardCornerRadius="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:drawableLeft="@drawable/ic_back"
                android:drawablePadding="@dimen/_19sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:fontFamily="@font/rubik"
                android:textFontWeight="700"
                tools:text="Profile" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_4sdp"
                android:gravity="center_horizontal"
                android:text="@string/set_up_profile"
                android:fontFamily="@font/rubik"
                android:textFontWeight="500"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                tools:text="Set up your profile " />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/update_text"
                android:fontFamily="@font/rubik"
                android:textFontWeight="400"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_28sdp"
                    app:srcCompat="@drawable/profile_picture" />
                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/profile_picture"
                    android:layout_alignEnd="@id/profile_picture"
                    android:src="@drawable/ic_camera" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:translationY="@dimen/_minus16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/card_view_profile">


        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textColor="@color/profileTitle"
            android:text="@string/personal_info"
            android:fontFamily="@font/rubik"
            android:textFontWeight="500"
            android:textSize="@dimen/_18ssp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_6sdp"
            android:layout_gravity="center_vertical"
            android:hint="@string/name"
            android:textColorHint="@color/profileGreen"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@color/profileInput"
                android:fontFamily="@font/rubik"
                android:textSize="@dimen/_16ssp"
                android:textFontWeight="300"
                android:paddingVertical="@dimen/_12sdp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_6sdp"
            android:hint="@string/contact_number"
            android:textColorHint="@color/profileGreen"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@color/profileInput"
                android:fontFamily="@font/rubik"
                android:textSize="@dimen/_16ssp"
                android:textFontWeight="300"
                android:paddingVertical="@dimen/_12sdp"
                android:drawableRight="@drawable/ic_pencil"
                android:drawablePadding="@dimen/_12sdp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_6sdp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/profileGreen"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_pencil"
                android:drawablePadding="@dimen/_12sdp"
                android:fontFamily="@font/rubik"
                android:textSize="@dimen/_16ssp"
                android:textFontWeight="300"
                android:lines="1"
                android:paddingVertical="@dimen/_12sdp"
                android:textColor="@color/profileInput" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:hint="@string/location"
            android:textColorHint="@color/profileGreen"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/profileInput"
                android:fontFamily="@font/rubik"
                android:textSize="@dimen/_16ssp"
                android:layout_weight="300"
                android:lines="1"
                android:paddingVertical="@dimen/_12sdp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/profileGreen"
            app:cardCornerRadius="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_76sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:fontFamily="@font/rubik"
                android:textFontWeight="500"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/white"
                android:text="Continue" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>